@@ -1,2 +1,3 @@
 09 Mods installed on tracker with credits - Mon 22 Mar 2010 10:27:50 PM EET - http://bit.ly/crBMOa
 09 Poster Mod installed - Tue 23 Mar 2010 12:31:51 AM EET - http://bit.ly/durbxt
+Poster with glossy style - Tue 23 Mar 2010 01:05:18 AM EET - http://bit.ly/9NxSX2
